Move declarations of getdelim() and getline() from the (incorrect) ANSI C section to POSIX-2008.  From Jarmo Jaakkola in PR standards/48788.